<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ihistory"
            android:title="@string/historyculture" />
        <item
            android:id="@+id/nav_monument"
            android:icon="@drawable/imonument"
            android:title="@string/monument" />
        <item
            android:id="@+id/nav_hotel"
            android:icon="@drawable/ihotel"
            android:title="@string/hotel" />
        <item
            android:id="@+id/nav_restaurant"
            android:icon="@drawable/irestaurant"
            android:title="@string/restaurant" />
        <item
            android:id="@+id/nav_beach"
            android:icon="@drawable/ibeach"
            android:title="@string/beach" />

    </group>
</menu>