<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorSee"
    android:minHeight="@dimen/list_item_height"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/photo_image_view"
        android:layout_width="@dimen/list_item_height"
        android:layout_height="@dimen/list_item_height"
        android:contentDescription="@string/photo"/>

    <LinearLayout
        android:id="@+id/text_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="@dimen/padding16">

        <TextView
            android:id="@+id/description_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/padding10"
            android:paddingBottom="@dimen/padding10"
            style="@style/TextAppearance.AppCompat.Title.Inverse"
            tools:text="@string/place"
            android:textColor="@color/colorBlack"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <ImageView
                android:id="@+id/location_image_view"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@drawable/ilocation"
                android:contentDescription="@string/location"
                />
            <TextView
                android:id="@+id/location_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/padding10"
                style="@style/TextAppearance.AppCompat.Body1"
                tools:text="@string/street"
                android:textColor="@color/colorBlack"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="@dimen/padding10"
            >
            <ImageView
                android:id="@+id/price_image_view"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@drawable/iprice"
                android:contentDescription="@string/price"
                />
        <TextView
            android:id="@+id/price_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextAppearance.AppCompat.Small"
            tools:text="@string/euros"
            android:textColor="@color/colorBlack"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>